# src/modules/cars/useCases/createSpecification/CreateSpecificationController.ts
@@ -1,15 +1,17 @@
 import { Request, Response } from "express"
+import { container } from "tsyringe"
+
 import { CreateSpecificationUseCase } from "./CreateSpecificationUseCase"
 
 class CreateSpecificationController {
-  constructor(private createSpecificationsUseCase: CreateSpecificationUseCase) { }
-
-  handle(request: Request, response: Response): Response {
+  async handle(request: Request, response: Response): Promise<Response> {
     const { name, description } = request.body
 
-    this.createSpecificationsUseCase.execute({ name, description })
+    const createSpecificationsUseCase = container.resolve(CreateSpecificationUseCase)
 
-    return response.status(201).json("specification created successfully")
+    await createSpecificationsUseCase.execute({ name, description })
+
+    return response.status(201).json({ message: "specification created successfully"})
   }
 }
 
