# src/routes/categories.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from "express"
 import multer from "multer"
 
-import createCategoryController from "../modules/cars/useCases/createCategory"
-import { listCategoriesController } from "../modules/cars/useCases/listCategories"
-import { importCategoryController } from "../modules/cars/useCases/importCategory"
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController"
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController"
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController"
 
 const categoriesRoutes = Router()
 
@@ -11,17 +11,14 @@ const upload = multer({
   dest: "./tmp"
 })
 
+const createCategoryController = new CreateCategoryController()
+const listCategoriesController = new ListCategoriesController()
+const importCategoryController = new ImportCategoryController()
 
-categoriesRoutes.post("/", (request, response) => {
-  return createCategoryController().handle(request, response)
-})
+categoriesRoutes.post("/", createCategoryController.handle)
 
-categoriesRoutes.get("/", (request, response) => {
-  return listCategoriesController.handle(request, response)
-})
+categoriesRoutes.get("/", listCategoriesController.handle)
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-  return importCategoryController.handle(request, response)
-})
+categoriesRoutes.post("/import", upload.single("file"), importCategoryController.handle)
 
 export { categoriesRoutes }
