# src/routes/specifications.routes.ts
@@ -1,10 +1,11 @@
 import { Router } from "express"
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification"
+
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController"
 
 const specificationsRoutes = Router()
 
-specificationsRoutes.post("/", (request, response) => {
-  return createSpecificationController.handle(request, response)
-})
+const createSpecificationController = new CreateSpecificationController()
+
+specificationsRoutes.post("/", createSpecificationController.handle)
 
 export { specificationsRoutes }
